--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,8 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 267,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.495321Z",
+     "start_time": "2023-05-14T17:03:33.251494Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import PIL\n",
@@ -62,8 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 268,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.497269Z",
+     "start_time": "2023-05-14T17:03:33.256759Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def RGB_en_YCbCR(image):\n",
@@ -93,8 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 269,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.506999Z",
+     "start_time": "2023-05-14T17:03:33.278882Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def YCbCR_en_RGB(image):\n",
@@ -121,8 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 270,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.508066Z",
+     "start_time": "2023-05-14T17:03:33.289048Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -140,8 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 271,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.509470Z",
+     "start_time": "2023-05-14T17:03:33.297816Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def unpadding(padded_image, image_origine):\n",
@@ -177,8 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 272,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.509801Z",
+     "start_time": "2023-05-14T17:03:33.305027Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def sous_echantillonnage(matrice):\n",
@@ -206,8 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 273,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.511211Z",
+     "start_time": "2023-05-14T17:03:33.313498Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -240,8 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 274,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.511494Z",
+     "start_time": "2023-05-14T17:03:33.322967Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def decoupe_bloc(matrice):\n",
@@ -278,8 +318,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 275,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.526142Z",
+     "start_time": "2023-05-14T17:03:33.329341Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def applique_trans(liste_bloc):\n",
@@ -299,8 +344,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 276,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.526625Z",
+     "start_time": "2023-05-14T17:03:33.338694Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def applique_seuil(liste_bloc, seuil):\n",
@@ -323,8 +373,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 277,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:33.528540Z",
+     "start_time": "2023-05-14T17:03:33.353573Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def trois_modes(image, seuil):\n",
@@ -352,18 +407,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 286,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T14:44:30.145282Z",
-     "start_time": "2023-05-08T14:44:30.139328Z"
+     "end_time": "2023-05-14T17:11:40.210721Z",
+     "start_time": "2023-05-14T17:11:40.199867Z"
     }
    },
    "outputs": [],
    "source": [
     "def ecrire_fichier(image, mode):\n",
     "    f = open(\"fichier.txt\", \"w\")\n",
-    "    f.write(f\"SJPG\\n{str(len(image[0]))} {str(len(image[0][0]))}\\n{mode}\\nRLE\\n\")"
+    "    f.write(f\"SJPG\\n{str(len(image[0]))} {str(len(image[0][0]))}\\n{mode}\\nRLE\\n\")\n",
+    "\n",
+    "    f.close()\n",
+    "    return"
    ]
   },
   {
@@ -376,23 +434,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 279,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:34.383272Z",
+     "start_time": "2023-05-14T17:03:33.401167Z"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "620 3\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": [
-       "<_io.TextIOWrapper name='fichier.txt' mode='w' encoding='UTF-8'>"
-      ]
+      "text/plain": "<_io.TextIOWrapper name='fichier.txt' mode='w' encoding='UTF-8'>"
      },
-     "execution_count": 26,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,8 +482,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 280,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:34.387215Z",
+     "start_time": "2023-05-14T17:03:34.384257Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def code_RLE(fichier):\n",
@@ -469,8 +528,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 281,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:34.392331Z",
+     "start_time": "2023-05-14T17:03:34.390103Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def decompress(liste_bloc):\n",
@@ -502,10 +566,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 282,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:03:34.396458Z",
+     "start_time": "2023-05-14T17:03:34.392576Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def lire_fichier(fichier):\n",
+    "    f = open(fichier, \"r\")\n",
+    "    ligne = f.readlines()\n",
+    "    mode = ligne[2]\n",
+    "    if ligne[3] == \"RLE\":\n",
+    "        rle = True\n",
+    "    else:\n",
+    "        rle = False\n",
+    "    f.close()\n",
+    "    return mode, rle"
+   ]
   },
   {
    "attachments": {},
@@ -517,19 +597,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 289,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T17:14:51.757176Z",
+     "start_time": "2023-05-14T17:14:21.477983Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Too many dimensions: 4 > 3.",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\arias\\OneDrive\\Bureau\\Projet IN202\\Projet-IN202\\projet.ipynb Cellule 37\u001b[0m in \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X51sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m mode_1 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),\u001b[39m10\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X51sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m mode_2 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),\u001b[39m10\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X51sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m Image\u001b[39m.\u001b[39;49mfromarray(mode_0,\u001b[39m'\u001b[39;49m\u001b[39mRGB\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39mshow()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X51sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m Image\u001b[39m.\u001b[39mfromarray(mode_1,\u001b[39m'\u001b[39m\u001b[39mRGB\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mshow()\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\PIL\\Image.py:3103\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   3101\u001b[0m \u001b[39mif\u001b[39;00m ndim \u001b[39m>\u001b[39m ndmax:\n\u001b[0;32m   3102\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToo many dimensions: \u001b[39m\u001b[39m{\u001b[39;00mndim\u001b[39m}\u001b[39;00m\u001b[39m > \u001b[39m\u001b[39m{\u001b[39;00mndmax\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 3103\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg)\n\u001b[0;32m   3105\u001b[0m size \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mif\u001b[39;00m ndim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m shape[\u001b[39m1\u001b[39m], shape[\u001b[39m0\u001b[39m]\n\u001b[0;32m   3106\u001b[0m \u001b[39mif\u001b[39;00m strides \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "\u001b[1;31mValueError\u001b[0m: Too many dimensions: 4 > 3."
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [289], line 20\u001B[0m\n\u001B[1;32m     18\u001B[0m ecrire_fichier(test, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmode 0\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[0;32m---> 20\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn [282], line 5\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m      3\u001B[0m ligne \u001B[38;5;241m=\u001B[39m f\u001B[38;5;241m.\u001B[39mreadlines()\n\u001B[1;32m      4\u001B[0m mode \u001B[38;5;241m=\u001B[39m ligne[\u001B[38;5;241m2\u001B[39m]\n\u001B[0;32m----> 5\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mligne\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m3\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mRLE\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[1;32m      6\u001B[0m     rle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n",
+      "\u001B[0;31mIndexError\u001B[0m: list index out of range"
      ]
     }
    ],
@@ -551,10 +636,21 @@
     "mode_0 =applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test))))\n",
     "mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),10)\n",
     "mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),10)\n",
-    "\n",
-    "Image.fromarray(mode_0,'RGB').show()\n",
-    "Image.fromarray(mode_1,'RGB').show()"
+    "ecrire_fichier(test, \"mode 0\")\n",
+    "ecrire_bloc(test)\n",
+    "lire_fichier(\"fichier.txt\")\n",
+    "#Image.fromarray(mode_0,'RGB').show()\n",
+    "#Image.fromarray(mode_1,'RGB').show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
